@@ -6069,7 +6069,8 @@ namespace libtorrent
 	// the tracker as a failure and not retry
 	// it anymore
 	void torrent::tracker_request_error(tracker_request const& r
-		, int response_code, const std::string& str)
+		, int response_code, const std::string& str
+		, int retry_interval)
 	{
 		mutex::scoped_lock l(m_ses.m_mutex);
 
@@ -6083,7 +6084,7 @@ namespace libtorrent
 			announce_entry* ae = find_tracker(r);
 			if (ae)
 			{
-				ae->failed();
+				ae->failed(retry_interval);
 				int tracker_index = ae - &m_trackers[0];
 				deprioritize_tracker(tracker_index);
 			}
